--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "file-saver": "^2.0.2",
     "react": "^16.13.1",
+    "react-alert": "^7.0.2",
+    "react-alert-template-basic": "^1.0.0",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "xlsx": "^0.16.8"
+    "react-spinners": "^0.9.0",
+    "react-toggle": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
